--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#6E658F"
     android:padding="24dp">
-
+    <!--  android:gravity="start|top" = 왼쪽 top에서부터 text가 시작하도록  -->
     <EditText
         android:id="@+id/diaryContext"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:textColor="@color/purple_500"
+        android:background="@color/white"
         android:gravity="start|top"
-        app:layout_constraintTop_toTopOf="parent"
+        android:padding="10dp"
+        android:textColor="@color/purple_500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/white"
-        android:padding="10dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/diary_context"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
